Check for complete response object before trying to fire the CB on it. Modifying some defaults and logs and traces.

--- a/3.4/src/PubNubFlexExample.mxml
+++ b/3.4/src/PubNubFlexExample.mxml
@@ -28,7 +28,7 @@
 			
         [Bindable]
 
-        public var channel:String = 'hello_world,a,b';
+        public var channel:String = 'hello_world';
         //public var channel:String = 'rand_seq';
 
 
