--- a/3.4/src/PubNubFlexExample.mxml
+++ b/3.4/src/PubNubFlexExample.mxml
@@ -9,23 +9,23 @@
     </fx:Declarations>
     <fx:Script>
 		<![CDATA[
-			import com.pubnub.*;
-			import com.pubnub.environment.EnvironmentEvent;
-			import com.pubnub.environment.NetMonEvent;
-			import com.pubnub.json.*;
-			import com.pubnub.log.Log;
-			import com.pubnub.operation.*;
-			
-			import flash.events.*;
-			import flash.external.*;
-			import flash.utils.*;
-			
-			import mx.binding.utils.*;
-			import mx.collections.ArrayCollection;
-			import mx.events.*;
-			
-			import utils.*;
-			
+        import com.pubnub.*;
+        import com.pubnub.environment.EnvironmentEvent;
+        import com.pubnub.environment.NetMonEvent;
+        import com.pubnub.json.*;
+        import com.pubnub.log.Log;
+        import com.pubnub.operation.*;
+
+        import flash.events.*;
+        import flash.external.*;
+        import flash.utils.*;
+
+        import mx.binding.utils.*;
+        import mx.collections.ArrayCollection;
+        import mx.events.*;
+
+        import utils.*;
+
         [Bindable]
 
         public var channel:String = 'hello_world';
@@ -47,39 +47,39 @@
 
         [Bindable]
         public var cipher_key:String = '';
-		
-		[Bindable]
+
+        [Bindable]
         public var publishMessageText:String = 'hey';
         //public var publishMessageText:String = '{"text":"hey"}';
-		
-		[Bindable]
+
+        [Bindable]
         public var ssl:Boolean = true;
 
         [Bindable]
         public var noisy:Boolean = false;
 
         [Bindable]
-		private var channelsDataProvider:ArrayCollection;
+        private var channelsDataProvider:ArrayCollection;
 
         private var consoleCounter:int = 1;
         private var perfomance:Perfomance;
-		
-		protected function init(event:FlexEvent):void {
-			perfomance = new Perfomance(perfomanceTestView.getChildAt(0));
-			perfomance.ssl = ssl;
-			BindingUtils.bindSetter(updateOrigin, this, "origin");
-		}
-			
-        protected function onInitBtnClick(event:MouseEvent):void{
+
+        protected function init(event:FlexEvent):void {
+            perfomance = new Perfomance(perfomanceTestView.getChildAt(0));
+            perfomance.ssl = ssl;
+            BindingUtils.bindSetter(updateOrigin, this, "origin");
+        }
+
+        protected function onInitBtnClick(event:MouseEvent):void {
             //trace('onInitBtnClick');
-           var config:Object = {
-                origin:		this.origin,
-                publish_key:this.pub_key,
-                sub_key:	this.sub_key,
-                secret_key:	this.secret_key,
-                cipher_key:	this.cipher_key,
-                ssl:		this.ssl}
-			
+            var config:Object = {
+                origin: this.origin,
+                publish_key: this.pub_key,
+                sub_key: this.sub_key,
+                secret_key: this.secret_key,
+                cipher_key: this.cipher_key,
+                ssl: this.ssl}
+
             Pn.instance.addEventListener(PnEvent.INIT, onInit);
             Pn.instance.addEventListener(PnEvent.INIT_ERROR, onInitError);
             Pn.instance.addEventListener(PnEvent.SUBSCRIBE, onSubscribe);
@@ -88,41 +88,45 @@
             Pn.instance.addEventListener(PnEvent.PUBLISH, onPublish);
             Pn.instance.addEventListener(PnEvent.TIME, onPnTime);
             Pn.instance.addEventListener(EnvironmentEvent.SHUTDOWN, onPnShutdown);
+
             Pn.instance.addEventListener(NetMonEvent.HTTP_ENABLE, onPnConnected);
-            Pn.instance.addEventListener(NetMonEvent.HTTP_DISABLE, onPnDisconnected);
+
+            Pn.instance.addEventListener(NetMonEvent.HTTP_ENABLE_VIA_SUBSCRIBE_TIMEOUT, onPnConnected);
+            Pn.instance.addEventListener(NetMonEvent.HTTP_DISABLE_VIA_SUBSCRIBE_TIMEOUT, onPnDisconnected);
+
             Pn.init(config);
         }
-		
-		private function onPnDisconnected(e:NetMonEvent):void {
-			
-			this.connectionStatus.setStyle('backgroundColor', "#FC0000");
-		}
-		
-		private function onPnConnected(e:NetMonEvent):void {
-			this.connectionStatus.setStyle('backgroundColor', "#00FC00");
-		}
-		
-		private function onPnShutdown(e:EnvironmentEvent):void {
-			callExternalInterface("console.log", ("Pn SHUTDOWN:" + PnJSON.stringify(e.data) ));
-		}
-		
+
+        private function onPnDisconnected(e:NetMonEvent):void {
+
+            this.connectionStatus.setStyle('backgroundColor', "#FC0000");
+        }
+
+        private function onPnConnected(e:NetMonEvent):void {
+            this.connectionStatus.setStyle('backgroundColor', "#00FC00");
+        }
+
+        private function onPnShutdown(e:EnvironmentEvent):void {
+            callExternalInterface("console.log", ("Pn SHUTDOWN:" + PnJSON.stringify(e.data) ));
+        }
+
         private function onInit(e:PnEvent):void {
-			//if (perfomance.isRun) return;
-			sslCheckBox.enabled = false;
+            //if (perfomance.isRun) return;
+            sslCheckBox.enabled = false;
             callExternalInterface("console.log", ("Pn init : " + Pn.instance.sessionUUID));
         }
 
         private function onInitError(e:PnEvent):void {
-			//if (perfomance.isRun) return;
+            //if (perfomance.isRun) return;
             callExternalInterface("console.log", ("onInitError"));
         }
 
         private function onSubscribeClick(e:MouseEvent):void {
-             Pn.subscribe(channel);
+            Pn.subscribe(channel);
         }
 
         private function onSubscribe(e:PnEvent):void {
-			//if (perfomance.isRun) return;
+            //if (perfomance.isRun) return;
             switch (e.status) {
                 case OperationStatus.DATA:
                     callExternalInterface("console.log", ("Subscribe [DATA]: " + PnJSON.stringify(e.data)));
@@ -137,18 +141,18 @@
                     break;
 
                 case OperationStatus.ERROR:
-                    callExternalInterface("console.log", ("Subscribe [ERROR]:" + (e.channel?e.channel : 'no channel') + ', ' + e.data));
+                    callExternalInterface("console.log", ("Subscribe [ERROR]:" + (e.channel ? e.channel : 'no channel') + ', ' + e.data));
                     break;
             }
-			channelsDataProvider = new ArrayCollection(Pn.getSubscribeChannels());
+            channelsDataProvider = new ArrayCollection(Pn.getSubscribeChannels());
         }
-		
-		private function onPresence(e:PnEvent):void {
-			 callExternalInterface("console.log", ("Presence : " + PnJSON.stringify(e.data)));
-			 channelsDataProvider = new ArrayCollection(Pn.getSubscribeChannels());
-		}
 
-        protected function OnCustomClick(event:MouseEvent):void{
+        private function onPresence(e:PnEvent):void {
+            callExternalInterface("console.log", ("Presence : " + PnJSON.stringify(e.data)));
+            channelsDataProvider = new ArrayCollection(Pn.getSubscribeChannels());
+        }
+
+        protected function OnCustomClick(event:MouseEvent):void {
             if (noisy == true) {
                 channelTxt.text = 'hello_world,a,b';
                 subKeyTxt.text = "demo"
@@ -160,24 +164,24 @@
             }
         }
 
-            protected function OnClearConsoleBtnClick(event:MouseEvent):void{
-                consoleCounter = 1;
-                consoleArea.text = '';
-            }
+        protected function OnClearConsoleBtnClick(event:MouseEvent):void {
+            consoleCounter = 1;
+            consoleArea.text = '';
+        }
 
-            private function onDetHistoryClick(e:MouseEvent):void {
+        private function onDetHistoryClick(e:MouseEvent):void {
             var args:Object = { };
-            args.start = startTimeTxt.enabled ? startTimeTxt.text: null ;
+            args.start = startTimeTxt.enabled ? startTimeTxt.text : null;
             args.end = endTimeTxt.enabled ? endTimeTxt.text : null;
             args.count = countTxt.enabled ? countTxt.text : null;
-            args.reverse = reverseTxt.enabled ? (reverseTxt.text == 'true' ? true : false): null;
+            args.reverse = reverseTxt.enabled ? (reverseTxt.text == 'true' ? true : false) : null;
             args.channel = detChannelList.selectedItem.toString();
             args['sub-key'] = this.sub_key;
             Pn.instance.detailedHistory(args);
         }
 
         private function onDetailedHistory(e:PnEvent):void {
-			//if (perfomance.isRun) return;
+            //if (perfomance.isRun) return;
             switch (e.status) {
                 case OperationStatus.DATA:
                     var messages:Array = e.data as Array;
@@ -190,13 +194,13 @@
             }
         }
 
-        protected function unsubscribeBtn_clickHandler(event:MouseEvent):void{
+        protected function unsubscribeBtn_clickHandler(event:MouseEvent):void {
             Pn.unsubscribeAll();
         }
-			
-		protected function unsubscribeChannel_clickHandler(event:MouseEvent):void{
-				Pn.unsubscribe(this.unsubChannelName.text);
-		}
+
+        protected function unsubscribeChannel_clickHandler(event:MouseEvent):void {
+            Pn.unsubscribe(this.unsubChannelName.text);
+        }
 
         private function callExternalInterface(functionName:String, ...rest):void {
             if (ExternalInterface.available) {
@@ -208,24 +212,25 @@
                 consoleCounter = 0;
             }
 
-            consoleArea.appendText((consoleCounter++) +'. '+ rest + '\n');
+            consoleArea.appendText((consoleCounter++) + '. ' + rest + '\n');
 
         }
 
-		private var startPublishTime:Number;
+        private var startPublishTime:Number;
+
         protected function publishBtn_clickHandler(event:MouseEvent):void {
-			startPublishTime = getTimer();
-			var ch:String = publishChannelList.selectedItem.toString();
-            Pn.publish({channel : ch, message : publishMessageTxt.text});
+            startPublishTime = getTimer();
+            var ch:String = publishChannelList.selectedItem.toString();
+            Pn.publish({channel: ch, message: publishMessageTxt.text});
         }
 
         private function onPublish(e:PnEvent):void {
-			//trace('onPublish : ' + e.status)
-			//if (perfomance.isRun) return;
+            //trace('onPublish : ' + e.status)
+            //if (perfomance.isRun) return;
             switch (e.status) {
                 case OperationStatus.DATA:
                     var messages:Array = e.data as Array;
-                    if(messages) callExternalInterface("console.log", ("Publish [DATA], channel : " + e.channel + ' : [' + messages.join(',') + ']'));
+                    if (messages) callExternalInterface("console.log", ("Publish [DATA], channel : " + e.channel + ' : [' + messages.join(',') + ']'));
                     break;
 
                 case OperationStatus.ERROR:
@@ -233,14 +238,14 @@
                     break;
             }
         }
-		
-		private function onTime(e:MouseEvent):void {
-			Pn.time(); 
-		}
-		
-		private function onPnTime(e:PnEvent):void {
-			//if (perfomance.isRun) return;
-			switch (e.status) {
+
+        private function onTime(e:MouseEvent):void {
+            Pn.time();
+        }
+
+        private function onPnTime(e:PnEvent):void {
+            //if (perfomance.isRun) return;
+            switch (e.status) {
                 case OperationStatus.DATA:
                     callExternalInterface("console.log", ("Time [DATA]: " + PnJSON.stringify(e.data)));
                     break;
@@ -249,50 +254,49 @@
                     callExternalInterface("console.log", ("Time [ERROR]: " + PnJSON.stringify(e.data)));
                     break;
             }
-		}
-		
-		private function updateOrigin(value:String = null):void{
-			Pn.instance.origin = value;
-		}
-		
-		private function onStartPerfomanceTest(e:MouseEvent):void {
-			perfomance.ssl = ssl;
-			perfomance.start();
-		}
-		
-		private function onStopPerfomanceTest(e:MouseEvent):void {
-			perfomance.stop();
-		}
-			
-		protected function getLogBtn_clickHandler(event:MouseEvent):void{
-			// TODO Auto-generated method stub
-			var level:String = null;
-			if (fatal_rb.selected) {
-				level = Log.FATAL;
-			}else if (normal_rb.selected) {
-				level = Log.NORMAL;
-			}else if (debug_rb.selected) {
-				level = Log.DEBUG;
-			}else if (error_rb.selected) {
-				level = Log.ERROR;
-			}else if (warning_rb.selected) {
-				level = Log.WARNING;
-			}
-			var arr:Array = Log.out(null, level);
-			loggingTA.text = arr.join('\n\n');
-		}
-			
-			protected function onSubscribeWithTokenBtn(event:MouseEvent):void{
-				var token:String = tokenInputTxt.text;
-				if(token != null){
-					trace('token.length : ' + token.length );
-					if(token.length > 0){
-						Pn.subscribe(channel, token);
-					}
-				}
-			}
-			
-		]]>
+        }
+
+        private function updateOrigin(value:String = null):void {
+            Pn.instance.origin = value;
+        }
+
+        private function onStartPerfomanceTest(e:MouseEvent):void {
+            perfomance.ssl = ssl;
+            perfomance.start();
+        }
+
+        private function onStopPerfomanceTest(e:MouseEvent):void {
+            perfomance.stop();
+        }
+
+        protected function getLogBtn_clickHandler(event:MouseEvent):void {
+            // TODO Auto-generated method stub
+            var level:String = null;
+            if (fatal_rb.selected) {
+                level = Log.FATAL;
+            } else if (normal_rb.selected) {
+                level = Log.NORMAL;
+            } else if (debug_rb.selected) {
+                level = Log.DEBUG;
+            } else if (error_rb.selected) {
+                level = Log.ERROR;
+            } else if (warning_rb.selected) {
+                level = Log.WARNING;
+            }
+            var arr:Array = Log.out(null, level);
+            loggingTA.text = arr.join('\n\n');
+        }
+
+        protected function onSubscribeWithTokenBtn(event:MouseEvent):void {
+            var token:String = tokenInputTxt.text;
+            if (token != null) {
+                trace('token.length : ' + token.length);
+                if (token.length > 0) {
+                    Pn.subscribe(channel, token);
+                }
+            }
+        }
+        ]]>
 	</fx:Script>
 
     <s:Label x="125" y="13" height="10" fontWeight="bold" color="#E01F1F" text="Verify below settings, and then be sure to initialize from Init tab before proceeding."
@@ -309,7 +313,7 @@
             <s:TextInput id="secretKeyTxt" x="81" y="25" width="246" text="@{secret_key}"/>
             <s:Label x="16" y="60" color="#4D4C4C" fontStyle="italic" text="cipher_key" textAlign="right"/>
             <s:TextInput id="cipherKeyTxt" x="81" y="55" width="246" text="@{cipher_key}"/>
-            <s:Button id="initBtn" x="10" y="85" label="Init" click="onInitBtnClick(event)"/>
+            <s:Button id="initBtn" x="350" y="25" label="Init" click="onInitBtnClick(event)"/>
         </s:NavigatorContent>
         <s:NavigatorContent width="100%" height="100%" label="Subscribe (2)">
             <s:Button id="subscribeBtn" x="10" y="5" label="Subscribe" click="onSubscribeClick(event)" />
