renamed SyncConnection to NonSubConnection, renamed HTTP_DIS|EN-ABLE to SUBSCRIBE_TIMEOUT|IN, inlining methods,

--- a/3.4/src/PubNubFlexExample.mxml
+++ b/3.4/src/PubNubFlexExample.mxml
@@ -89,8 +89,8 @@
             Pn.instance.addEventListener(PnEvent.TIME, onPnTime);
             Pn.instance.addEventListener(EnvironmentEvent.SHUTDOWN, onPnShutdown);
 
-            Pn.instance.addEventListener(NetMonEvent.HTTP_ENABLE_VIA_SUBSCRIBE_TIMEOUT, onPnConnected);
-            Pn.instance.addEventListener(NetMonEvent.HTTP_DISABLE_VIA_SUBSCRIBE_TIMEOUT, onPnDisconnected);
+            Pn.instance.addEventListener(NetMonEvent.SUBSCRIBE_TIMEIN, onPnConnected);
+            Pn.instance.addEventListener(NetMonEvent.SUBSCRIBE_TIMEOUT, onPnDisconnected);
 
             Pn.init(config);
         }
