--- a/3.4/src/PubNubFlexExample.mxml
+++ b/3.4/src/PubNubFlexExample.mxml
@@ -89,8 +89,8 @@
             Pn.instance.addEventListener(PnEvent.TIME, onPnTime);
             Pn.instance.addEventListener(EnvironmentEvent.SHUTDOWN, onPnShutdown);
 
-            Pn.instance.addEventListener(NetMonEvent.SUBSCRIBE_TIMEIN, onPnConnected);
-            Pn.instance.addEventListener(NetMonEvent.SUBSCRIBE_TIMEOUT, onPnDisconnected);
+            Pn.instance.addEventListener(NetMonEvent.NET_UP, onPnConnected);
+            Pn.instance.addEventListener(NetMonEvent.NET_DOWN, onPnDisconnected);
 
             Pn.init(config);
         }
