--- a/3.4/src/PubNubFlexExample.mxml
+++ b/3.4/src/PubNubFlexExample.mxml
@@ -88,7 +88,7 @@
             Pn.instance.addEventListener(PnEvent.DETAILED_HISTORY, onDetailedHistory);
             Pn.instance.addEventListener(PnEvent.PUBLISH, onPublish);
             Pn.instance.addEventListener(PnEvent.TIME, onPnTime);
-            Pn.instance.addEventListener(EnvironmentEvent.SHUTDOWN, onPnShutdown);
+            Pn.instance.addEventListener(PnEvent.RESUME_FROM_SLEEP, onPnResumeFromSleep);
 
             Pn.instance.addEventListener(NetMonEvent.SUB_NET_UP, onPnConnected);
             Pn.instance.addEventListener(NetMonEvent.SUB_NET_DOWN, onPnDisconnected);
@@ -117,8 +117,8 @@
             this.nonSubConnectionStatus.setStyle('backgroundColor', "#00FC00");
         }
 
-        private function onPnShutdown(e:EnvironmentEvent):void {
-            callExternalInterface("console.log", ("Pn SHUTDOWN:" + PnJSON.stringify(e.data) ));
+        private function onPnResumeFromSleep(e:EnvironmentEvent):void {
+            callExternalInterface("console.log", ("Pn ResumeFromSleep"));
         }
 
         private function onInit(e:PnEvent):void {
