init sets up non-sub connection and time.

--- a/3.4/src/PubNubFlexExample.mxml
+++ b/3.4/src/PubNubFlexExample.mxml
@@ -117,7 +117,7 @@
             this.nonSubConnectionStatus.setStyle('backgroundColor', "#00FC00");
         }
 
-        private function onPnResumeFromSleep(e:EnvironmentEvent):void {
+        private function onPnResumeFromSleep(e:PnEvent):void {
             callExternalInterface("console.log", ("Pn ResumeFromSleep"));
         }
 
