--- a/3.4.1/src/PubNubFlexExample.mxml
+++ b/3.4.1/src/PubNubFlexExample.mxml
@@ -29,7 +29,7 @@
 
         [Bindable]
 
-        public var channel:String = 'a'; //'hello_world'; //ping_3';
+        public var channel:String = 'a,hello_world'; //ping_3';
         //public var channel:String = 'rand_seq';
 
 
