--- a/demoApp/src/demoApp.mxml
+++ b/demoApp/src/demoApp.mxml
@@ -2,6 +2,7 @@
 <s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
                xmlns:s="library://ns.adobe.com/flex/spark"
                xmlns:mx="library://ns.adobe.com/flex/mx"
+			   xmlns:comp="components.*"
                width="809" height="846" minWidth="955" minHeight="600"
                creationComplete="init(event)">
     <fx:Style source="demoStyles.css"/>
@@ -12,12 +13,12 @@
 		<![CDATA[
         import com.pubnub.PubNub;
         import com.pubnub.PubNubSecure;
-
+        
         import flashx.textLayout.elements.TextFlow;
-
+        
         import mx.formatters.DateFormatter;
         import mx.utils.StringUtil;
-
+        
         import spark.utils.TextFlowUtil;
 
         [Bindable]
@@ -30,7 +31,20 @@
         private var presenceString:String;
         private var historyString:String;
         private var flow:TextFlow;
-
+		private var chromeColorStatusOff:String = "#56B6F9";
+		private var chromeColorStatusOn:String = "#cd0202";
+		private var SOME_UUID:String = 'some_uuid';
+			
+			[Embed(source='../assets/Lock.png')]
+			[Bindable]
+			public var iconLock:Class; 
+			
+			[Embed(source='../assets/unLock.png')]
+			[Bindable]
+			public var iconUnLock:Class;
+			
+			public var isSsl:Boolean;
+			
         public function init(e:Event = null):void {
 
             getMessagesTextArea();
@@ -49,17 +63,16 @@
             pamAuthKeyTextInput.text = 'x';
             pamChannelTextInput.text = 'flash_channel';
             pamTtlTextInput.text = '15';
-
-            subscribe();
+			
+			btnSSL.setStyle("icon",iconLock);
+			btnSSL.setStyle("chromeColor","#cd0202");
+			offMisc();
+			subscribe();
         }
-
+		
         // Additional buttons:
-        public function getUuid(uuid:*):void {
+        public function onSetUuid(uuid:*):void {
             appendStringToConsole(uuid);
-        }
-
-        private function auth():void {
-            p.auth(authKeyTextInput.text);
         }
 
         private function time():void {
@@ -78,12 +91,25 @@
             });
         }
 
-        private function uuid():void {
-            p.set_uuid('some_uuid');
-            p.get_uuid(getUuid);
-            p.uuid(getUuid);
-        }
+        private function doSetUuid():void {
+			
+			p.set_uuid(SOME_UUID);
+			p.uuid(onSetUuid);
+		}
 
+		private function doGetUuid():void {
+			p.get_uuid(onSetUuid);
+		}
+		
+		private function doHereNow():void{
+			p.here_now({
+				channel: channel_val(), 
+				callback: function (msg:Object):void {
+					appendObjectToConsole(msg);
+				}
+			});
+				
+		}
         // Common buttons:
         private function clearLogHandler():void {
             consoleLog.text = "";
@@ -123,7 +149,7 @@
             p = (cipher_key ? PubNubSecure.init : PubNub.init)({
                 publish_key: publish_key,
                 auth_key: auth_key,
-                ssl: sslCheckBox.selected,
+                ssl: isSsl,
                 cipher_key: cipher_key,
                 secret_key: secret_key,
                 subscribe_key: subscribe_key,
@@ -235,11 +261,45 @@
                 error: appendErrorToConsole
             });
         }
-
-
+			
+			private function miscHandler():void{
+				
+				if(!miscContainer.visible){
+					onMisc();
+				}else{
+					offMisc();
+				}
+				
+			}
+			private function onMisc():void{
+				btnSSL.setStyle("chromeColor",chromeColorStatusOff);
+				miscContainer.visible = true;
+				miscContainer.y = 44;
+				bottomContainer.y = 88;
+			}
+			private function offMisc():void{
+				btnSSL.setStyle("chromeColor",chromeColorStatusOn);
+				miscContainer.visible = false;
+				bottomContainer.y = 44;
+				
+			}
         // Helpers:
         private function toggleSSL():void {
-            subscribe();
+			if(!isSsl)
+			{
+				btnSSL.setStyle("icon",iconUnLock);
+				btnSSL.setStyle("chromeColor",chromeColorStatusOff);
+				isSsl =!isSsl;
+				subscribe();
+			}
+			else
+			{
+				isSsl =!isSsl;
+				btnSSL.setStyle("icon",iconLock);
+				btnSSL.setStyle("chromeColor",chromeColorStatusOn);
+			}
+			
+			
         }
 
         private function channel_val():String {
@@ -324,74 +384,96 @@
         }
         ]]>
 	</fx:Script>
-    <s:TextArea id="messagesTextArea" x="10" y="204" width="290" height="70" editable="true"
-                enabled="true" maxChars="160"/>
-    <s:Label x="12" y="300" height="19" text="Messages:"/>
-    <s:Scroller x="10" y="316" width="386" height="272">
-        <s:RichEditableText id="consoleLog" backgroundColor="#000000" color="#FFFFFF"
-                            editable="false" fontFamily="Arial" fontSize="10"
-                            paddingLeft="10" paddingRight="10" paddingTop="10" paddingBottom="10"
-                            fontWeight="bold"/>
-    </s:Scroller>
-    <s:Button id="clearLog" x="79" y="298" height="15" label="Clear" click="clearLogHandler()"/>
-    <s:Button x="229" y="251" label="Publish" click="publish()"/>
-    <s:TextInput id="originTextInput" x="11" y="63"/>
-    <s:TextInput id="subscribeKeyTextInput" x="232" y="41" width="314"/>
-    <s:TextInput id="channelTextInput" x="11" y="21"/>
-    <s:TextInput id="publishKeyTextInput" x="232" y="9" width="314" textAlign="left"/>
-    <s:Label x="11" y="48" text="origin"/>
-    <s:Label x="10" y="6" text="channel"/>
-    <s:Label x="151" y="45" height="15" text="subscribe key:" textAlign="right"/>
-    <s:Label x="162" y="12" text="publish key:" textAlign="right"/>
-    <s:Button x="206" y="171" label="Subscribe" click="subscribe()" id="subscribeButton"/>
-    <s:Button x="191" y="142" label="Unsubscribe" click="unsubscribe()" enabled="false" id="unsubscribeButton"/>
-    <s:Button x="326" y="142" label="Auth" click="auth()"/>
-    <s:Button x="326" y="199" label="Time" click="time()"/>
-    <s:Button x="326" y="170" label="uuid" click="uuid()"/>
-    <s:BorderContainer id="subConnectionStatus" x="326" y="71" width="53" height="13" backgroundColor="#FC0000">
-    </s:BorderContainer>
-    <s:Label x="232" y="73" color="#626262" fontStyle="italic" text="SUB Net status:"/>
-    <s:CheckBox id="sslCheckBox" x="550" y="11" label="SSL" click="toggleSSL()"/>
-    <s:Label x="12" y="89" text="auth_key"/>
-    <s:Label x="12" y="135" text="chiper_key"/>
-    <s:TextInput id="authKeyTextInput" x="11" y="104"/>
-    <s:TextInput id="chiperKeyTextInput" x="11" y="151"/>
-    <s:Group id="pamGroup" x="10" y="609" width="792" height="230">
-        <s:Rect id="pamBackground" width="100%" height="100%">
-            <s:fill>
-                <s:SolidColor color="#FF0000"/>
-            </s:fill>
-        </s:Rect>
-        <s:TextInput id="pamChannelTextInput" x="10" y="30" width="314"/>
-        <s:Label x="10" y="10" text="channel"/>
-        <s:Label x="10" y="60" text="auth_key"/>
-        <s:TextInput id="pamAuthKeyTextInput" x="10" y="80" width="314"/>
-        <s:Label x="10" y="110" text="secret key"/>
-        <s:TextInput id="pamSecretKeyTextInput" x="10" y="130" width="314"/>
-        <s:Label x="10" y="160" text="ttl"/>
-        <s:TextInput id="pamTtlTextInput" x="10" y="180" width="314"/>
-        <s:CheckBox id="pamReadCheckbox" x="365" y="31" label="Read ?"/>
-        <s:CheckBox id="pamWriteCheckbox" x="366" y="57" label="Write ?"/>
-        <s:Button id="grantButton" x="366" y="123" label="Grant" click="grant()"/>
-        <s:Button id="revokeButton" x="366" y="152" label="Revoke" click="revoke()"/>
-        <s:Button id="auditButton" x="366" y="181" label="Audit" click="audit()"/>
-        <s:CheckBox id="pamPnpresCheckbox" x="366" y="84" label="apply to *-pnpres channel too" selected="true"/>
-        <s:Label x="560" y="16" fontSize="20" fontWeight="bold" text="PAM - Access Manager"/>
-    </s:Group>
-    <s:Scroller x="420" y="92" width="382" height="199">
-        <s:RichEditableText id="presenceArea" backgroundColor="#000000" color="#FFFFFF"
-                            editable="false" fontFamily="Arial" fontSize="10"
-                            paddingLeft="10" paddingRight="10" paddingTop="10" paddingBottom="10"
-                            fontWeight="bold"/>
-    </s:Scroller>
-    <s:Label x="420" y="76" text="presence"/>
-    <s:Scroller x="420" y="316" width="382" height="272">
-        <s:RichEditableText id="historyArea" backgroundColor="#000000" color="#FFFFFF"
-                            editable="false" fontFamily="Arial" fontSize="10"
-                            paddingLeft="10" paddingRight="10" paddingTop="10" paddingBottom="10"/>
-    </s:Scroller>
-    <s:Label x="421" y="301" text="history"/>
-    <s:Button id="clearPresence" x="730" y="74" height="15" label="Clear" click="clearPresenceHandler()"/>
-    <s:Button id="clearHistory" x="732" y="298" height="15" label="Clear" click="clearHistoryHandler()"/>
-    <s:Button id="historyButton" x="326" y="227" label="History" click="history()"/>
+	<s:BorderContainer id="topContainer" width="809" height="45">
+		<s:Button id="subscribeButton" x="23" y="6" width="118" height="32" label="SUBSCRIBE"
+				  chromeColor="#CD0202" click="subscribe()" color="#FCFAFA"/>
+		<s:Button id="unsubscribeButton" x="146" y="6" width="118" height="32" label="UNSUBSCRIBE"
+				  click="unsubscribe()" color="#131111" enabled="false"/>
+		<s:Button id="btnSSL" x="270" y="6" height="32" label="SSL" chromeColor="#56B6F9"
+				  click="toggleSSL()"/>
+		<s:Button id="btnMisc" x="358" y="6" height="32" label="MISC" click="miscHandler()"/>
+		
+	</s:BorderContainer>
+	<s:BorderContainer id="miscContainer" x="0" y="44" width="809" height="45">
+		<s:Button x="11" y="5" label="time" click="time()"/>
+		<s:Button id="setUuid" x="93" y="5" label="setUuid" click="doSetUuid()"/>
+		<s:Button id="getUuid" x="175" y="5" label="getUuid" click="doGetUuid()"/>
+		<s:Button id="btnHereNow" x="260" y="5" label="Here now" click="doHereNow()"/>
+		
+	</s:BorderContainer>
+	<s:BorderContainer id="bottomContainer" x="0" y="88" width="809">
+		<s:TextArea id="messagesTextArea" x="15" y="143" width="388" height="70" editable="false"
+					enabled="true" maxChars="250"/>
+		<s:Label x="17" y="229" height="19" text="Messages:"/>
+		<s:Scroller x="10" y="316" width="386" height="272">
+		</s:Scroller>
+		<s:Button id="clearLog" x="84" y="227" height="15" label="Clear" click="clearLogHandler()"/>
+		<s:Button x="331" y="191" label="Publish" click="publish()"/>
+		<s:TextInput id="originTextInput" x="119" y="36"/>
+		<s:TextInput id="subscribeKeyTextInput" x="420" y="40" width="314"/>
+		<s:TextInput id="channelTextInput" x="119" y="6"/>
+		<s:TextInput id="publishKeyTextInput" x="420" y="8" width="314" textAlign="left"/>
+		<s:Label x="47" y="42" text="origin"/>
+		<s:Label x="46" y="12" text="channel"/>
+		<s:Label x="339" y="44" height="15" text="subscribe key:" textAlign="right"/>
+		<s:Label x="350" y="11" text="publish key:" textAlign="right"/>
+		
+		
+		
+		
+		
+		<s:BorderContainer id="subConnectionStatus" x="391" y="92" width="53" height="13" backgroundColor="#FC0000">
+		</s:BorderContainer>
+		<s:Label x="297" y="94" color="#626262" fontStyle="italic" text="SUB Net status:"/>
+		<s:Label x="48" y="70" text="auth_key"/>
+		<s:Label x="37" y="101" text="chiper_key"/>
+		<s:TextInput id="authKeyTextInput" x="119" y="64"/>
+		<s:TextInput id="chiperKeyTextInput" x="118" y="93"/>
+		<s:Group id="pamGroup" x="10" y="609" width="792" height="230">
+			<s:Rect id="pamBackground" width="100%" height="100%">
+				<s:fill>
+					<s:SolidColor color="#FF0000"/>
+				</s:fill>
+			</s:Rect>
+			<s:TextInput id="pamChannelTextInput" x="10" y="30" width="314"/>
+			<s:Label x="10" y="10" text="channel"/>
+			<s:Label x="10" y="60" text="auth_key"/>
+			<s:TextInput id="pamAuthKeyTextInput" x="10" y="80" width="314"/>
+			<s:Label x="10" y="110" text="secret key"/>
+			<s:TextInput id="pamSecretKeyTextInput" x="10" y="130" width="314"/>
+			<s:Label x="10" y="160" text="ttl"/>
+			<s:TextInput id="pamTtlTextInput" x="10" y="180" width="314"/>
+			<s:CheckBox id="pamReadCheckbox" x="365" y="31" label="Read ?"/>
+			<s:CheckBox id="pamWriteCheckbox" x="366" y="57" label="Write ?"/>
+			<s:Button id="grantButton" x="366" y="123" label="Grant" click="grant()"/>
+			<s:Button id="revokeButton" x="366" y="152" label="Revoke" click="revoke()"/>
+			<s:Button id="auditButton" x="366" y="181" label="Audit" click="audit()"/>
+			<s:CheckBox id="pamPnpresCheckbox" x="366" y="84" label="apply to *-pnpres channel too" selected="true"/>
+			<s:Label x="560" y="16" fontSize="20" fontWeight="bold" text="PAM - Access Manager"/>
+		</s:Group>
+		<s:Scroller x="423" y="142" width="382" height="70">
+			<s:RichEditableText id="presenceArea" backgroundColor="#000000" color="#FFFFFF"
+								editable="false" fontFamily="Arial" fontSize="10"
+								paddingLeft="10" paddingRight="10" paddingTop="10" paddingBottom="10"
+								fontWeight="bold"/>
+		</s:Scroller>
+		<s:Label x="425" y="126" text="presence"/>
+		<s:Scroller x="425" y="245" width="382" height="272">
+			<s:RichEditableText id="historyArea" backgroundColor="#000000" color="#FFFFFF"
+								editable="false" fontFamily="Arial" fontSize="10"
+								paddingLeft="10" paddingRight="10" paddingTop="10" paddingBottom="10"/>
+		</s:Scroller>
+		<s:Label x="426" y="230" text="history"/>
+		<s:Button id="clearPresence" x="735" y="124" height="15" label="Clear" click="clearPresenceHandler()"/>
+		<s:Button id="clearHistory" x="737" y="227" height="15" label="Clear" click="clearHistoryHandler()"/>
+		<s:Button id="historyButton" x="475" y="224" label="History" click="history()"/>
+		<s:RichEditableText id="consoleLog" x="15" y="245" backgroundColor="#000000" color="#FFFFFF"
+							editable="false" fontFamily="Arial" fontSize="10" fontWeight="bold"
+							paddingBottom="10" paddingLeft="10" paddingRight="10" paddingTop="10"/>
+		
+	
+	</s:BorderContainer>
+	
+	
+	
 </s:Application>
